@@ -13,7 +13,7 @@ public class EntitySheep extends EntityAnimals {
 
 	protected void entityInit() {
 		super.entityInit();
-		this.dataWatcher.addObject(16, new Byte((byte)0));
+		this.dataWatcher.addObject(16, Byte.valueOf((byte)0));
 	}
 
 	public boolean attackEntityFrom(Entity var1, int var2) {
